--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -10,6 +10,8 @@
 {% endif %}
 {% endblock %}
 
+<!-- manifest -->
+<link rel="manifest" href="/static/styles/manifest.webmanifest">
 
 {% if config["USE_LOCAL_JS_BUNDLES"] %}
 <!-- Use local JS and CSS bundles -->
