--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -49,7 +49,8 @@
         </fieldset>
     </div>
     <div class="modal-footer register-login-modal-footer">
-        {{ login_form.submit(class="btn btn-success login-register-form-group login-register-buttons center-block col-4 mr-4")}}
+        {{ login_form.submit(class="btn btn-success login-register-form-group login-register-buttons center-block col-4
+        mr-4")}}
         <a id="ToRegisterFromLogin" class="btn btn-secondary col-7 login-register-form-group center-block"
             href="javascript:;">Register</a>
     </div>
