--- a/src/static/styles/app.css
+++ b/src/static/styles/app.css
@@ -6,10 +6,14 @@
     --splashLabelGreen: rgba(46, 204, 113, 1.0);
     --darkSplashLabelGreen: rgba(30, 133, 73, 1.0);
 
-    --navbarTextHover: rgba(29, 33, 36, 1.0); /*1d2124*/
-    --navbarBackground: rgba(33, 37, 41, 1.0); /* #212529 */
-    --navbarBackgroundHover: rgba(77, 80, 83, 1.0); /* #4d5053 */
-    --navbarBackgroundFocus: rgba(121, 124, 126, 1.0); /* #797c7e */
+    /*1d2124*/
+    --navbarTextHover: rgba(29, 33, 36, 1.0);
+    /* #212529 */
+    --navbarBackground: rgba(33, 37, 41, 1.0);
+    /* #4d5053 */
+    --navbarBackgroundHover: rgba(77, 80, 83, 1.0);
+    /* #797c7e */
+    --navbarBackgroundFocus: rgba(121, 124, 126, 1.0);
 
     --pageBackgroundColor: rgba(31, 36, 36, 0.81);
     --panelBackgroundColor: rgba(31, 36, 36, 1.0);
@@ -21,8 +25,10 @@
     --blueLinkOnHover: rgba(5, 34, 77, 1.0);
     --darkGrayTextColor: rgba(51, 51, 51, 1.0);
     --selectedUTubColor: rgba(244, 94, 97, 1.0);
-    --selectedUTubColorBackground: rgba(61, 67, 67, 1.0); /* #3D4343 */
-    --selectedUTubColorBackgroundFocus: rgba(82, 88, 88, 1.0); /* #525858 */
+    /* #3D4343 */
+    --selectedUTubColorBackground: rgba(61, 67, 67, 1.0);
+    /* #525858 */
+    --selectedUTubColorBackgroundFocus: rgba(82, 88, 88, 1.0);
     --removeMemberColor: rgba(170, 65, 67, 1.0);
     --removeMemberColorLighter: rgba(170, 65, 67, 0.1);
 
@@ -52,8 +58,10 @@
     --oddUrlCardsBackgroundColor: rgba(61, 71, 71, 1.0);
     --evenUrlCardsBackgroundColor: rgba(51, 61, 61, 1.0);
 
-    --grayBadgeSelection: rgba(170, 170, 170, 1.0); /* #aaaaaa */
-    --grayBadgeSelectionFocus: rgba(187, 187, 187, 1.0); /* #bbbbbb */
+    /* #aaaaaa */
+    --grayBadgeSelection: rgba(170, 170, 170, 1.0);
+    /* #bbbbbb */
+    --grayBadgeSelectionFocus: rgba(187, 187, 187, 1.0);
 }
 
 /** HTML DOM Elements **/
@@ -61,6 +69,7 @@
 html,
 body {
     height: 100dvh;
+    min-height: 100dvh;
     width: 100%;
     margin: 0;
     padding: 0;
@@ -110,7 +119,7 @@ a {
 
 .nav-item {
     display: flex;
-    flex-direction:row;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     width: 100%;
