--- a/src/templates/register_user.html
+++ b/src/templates/register_user.html
@@ -93,4 +93,4 @@
     </div>
 </div>
 
-<script src="{{ url_for('static', filename='scripts/splash/register.js') }}"></script>
+<script src="{{ url_for('static', filename='scripts/splash/register.js') }}?v={{ ASSET_VERSION }}"></script>
