--- a/src/templates/splash.html
+++ b/src/templates/splash.html
@@ -16,7 +16,7 @@
     </div>
 </main>
 
-<script src="{{ url_for('static', filename='scripts/splash.js') }}"></script>
+<script src="{{ url_for('static', filename='scripts/splash.js') }}?v={{ ASSET_VERSION }}"></script>
 
 {% endif %}
 
