--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -56,4 +56,4 @@
     </div>
 </form>
 
-<script src="{{ url_for('static', filename='scripts/splash/login.js') }}"></script>
+<script src="{{ url_for('static', filename='scripts/splash/login.js') }}?v={{ ASSET_VERSION }}"></script>
