--- a/src/templates/password_reset/reset_password.html
+++ b/src/templates/password_reset/reset_password.html
@@ -29,7 +29,8 @@
             <div class="form-group">
                 {{ reset_password_form.confirm_new_password.label(class="form-control-label login-register-label")}}
                 {% if reset_password_form.confirm_new_password.errors %}
-                {{ reset_password_form.confirm_new_password(class="form-control login-register-form-group is-invalid") }}
+                {{ reset_password_form.confirm_new_password(class="form-control login-register-form-group is-invalid")
+                }}
                 <div class="invalid-feedback">
                     {% for error in reset_password_form.confirm_new_password.errors %}
                     <span>{{ error }}</span>
@@ -47,4 +48,4 @@
     </div>
 </form>
 
-<script src="{{ url_for('static', filename='scripts/splash/resetPassword.js') }}"></script>
+<script src="{{ url_for('static', filename='scripts/splash/resetPassword.js') }}?v={{ ASSET_VERSION }}"></script>
