--- a/src/templates/password_reset/reset_password_modal.html
+++ b/src/templates/password_reset/reset_password_modal.html
@@ -1,4 +1,5 @@
-<div class="modal fade show" id="SplashModal" tabindex="-1" aria-labelledby="FormModal" style="display: block;" aria-modal="true" role="dialog">
+<div class="modal fade show" id="SplashModal" tabindex="-1" aria-labelledby="FormModal" style="display: block;"
+    aria-modal="true" role="dialog">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <script type="text/javascript">
@@ -18,7 +19,8 @@
                         <div class="form-group first-in-register-login-form">
                             {{ reset_password_form.new_password.label(class="form-control-label login-register-label")}}
                             {% if reset_password_form.new_password.errors %}
-                            {{ reset_password_form.new_password(class="form-control login-register-form-group is-invalid") }}
+                            {{ reset_password_form.new_password(class="form-control login-register-form-group
+                            is-invalid") }}
                             <div class="invalid-feedback">
                                 {% for error in reset_password_form.new_password.errors %}
                                 <span>{{ error }}</span>
@@ -29,33 +31,39 @@
                             {% endif %}
                         </div>
                         <div class="form-group forgot-password-form-group">
-                            {{ reset_password_form.confirm_new_password.label(class="form-control-label login-register-label")}}
+                            {{ reset_password_form.confirm_new_password.label(class="form-control-label
+                            login-register-label")}}
                             {% if reset_password_form.confirm_new_password.errors %}
-                            {{ reset_password_form.confirm_new_password(class="form-control login-register-form-group is-invalid") }}
+                            {{ reset_password_form.confirm_new_password(class="form-control login-register-form-group
+                            is-invalid") }}
                             <div class="invalid-feedback">
                                 {% for error in reset_password_form.confirm_new_password.errors %}
                                 <span>{{ error }}</span>
                                 {% endfor %}
                             </div>
                             {% else %}
-                            {{ reset_password_form.confirm_new_password(class="form-control login-register-form-group")}}
+                            {{ reset_password_form.confirm_new_password(class="form-control
+                            login-register-form-group")}}
                             {% endif %}
                         </div>
                     </fieldset>
                     {% if reset_password_error %}
-                        <div id="SplashModalAlertBanner" class="alert alert-danger alert-banner-splash-modal-display" role="alert">
-                        {{ reset_password_error_message  }}
-                        </div>
+                    <div id="SplashModalAlertBanner" class="alert alert-danger alert-banner-splash-modal-display"
+                        role="alert">
+                        {{ reset_password_error_message }}
+                    </div>
                     {% else %}
-                        <div id="SplashModalAlertBanner" class="alert alert-banner-splash-modal-hide" role="alert"></div>
+                    <div id="SplashModalAlertBanner" class="alert alert-banner-splash-modal-hide" role="alert"></div>
                     {% endif %}
                 </div>
                 <div class="modal-footer">
-                    {{ reset_password_form.submit(class="btn btn-success login-register-buttons login-register-form-group col-12")}}
+                    {{ reset_password_form.submit(class="btn btn-success login-register-buttons
+                    login-register-form-group col-12")}}
                 </div>
             </form>
 
-            <script src="{{ url_for('static', filename='scripts/splash/resetPassword.js') }}"></script>
+            <script
+                src="{{ url_for('static', filename='scripts/splash/resetPassword.js') }}?v={{ ASSET_VERSION }}"></script>
         </div>
     </div>
 </div>
