Refactor tag related JS files

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -35,12 +35,20 @@
 <script src="{{ url_for('static', filename='scripts/utils.js') }}?v={{ ASSET_VERSION }}"></script>
 <script src="{{ url_for('static', filename='scripts/utubs.js') }}?v={{ ASSET_VERSION }}"></script>
 <script src="{{ url_for('static', filename='scripts/utubs_routes.js') }}?v={{ ASSET_VERSION }}"></script>
-<script src="{{ url_for('static', filename='scripts/tags.js') }}?v={{ ASSET_VERSION }}"></script>
-<script src="{{ url_for('static', filename='scripts/tags_routes.js') }}?v={{ ASSET_VERSION }}"></script>
 <script src="{{ url_for('static', filename='scripts/urls.js') }}?v={{ ASSET_VERSION }}"></script>
 <script src="{{ url_for('static', filename='scripts/urls_routes.js') }}?v={{ ASSET_VERSION }}"></script>
 <script src="{{ url_for('static', filename='scripts/members.js') }}?v={{ ASSET_VERSION }}"></script>
 <script src="{{ url_for('static', filename='scripts/members_routes.js') }}?v={{ ASSET_VERSION }}"></script>
+
+<script src="{{ url_for('static', filename='scripts/components/url_cards/url_cards_utils.js') }}?v={{ ASSET_VERSION }}"></script>
+<script src="{{ url_for('static', filename='scripts/components/url_tags/create_url_tag.js') }}?v={{ ASSET_VERSION }}"></script>
+<script src="{{ url_for('static', filename='scripts/components/url_tags/delete_url_tag.js') }}?v={{ ASSET_VERSION }}"></script>
+<script src="{{ url_for('static', filename='scripts/components/url_tags/url_tags.js') }}?v={{ ASSET_VERSION }}"></script>
+<script src="{{ url_for('static', filename='scripts/components/utub_tags/create_utub_tag.js') }}?v={{ ASSET_VERSION }}"></script>
+<script src="{{ url_for('static', filename='scripts/components/utub_tags/unselect_all_utub_tags.js') }}?v={{ ASSET_VERSION }}"></script>
+<script src="{{ url_for('static', filename='scripts/components/utub_tags/utub_tags.js') }}?v={{ ASSET_VERSION }}"></script>
+<script src="{{ url_for('static', filename='scripts/components/utub_tags/utub_tags_deck.js') }}?v={{ ASSET_VERSION }}"></script>
+<script src="{{ url_for('static', filename='scripts/components/utub_tags/utub_tags_utils.js') }}?v={{ ASSET_VERSION }}"></script>
 
 {% endblock %}
 
