Refactor members JS files

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -35,13 +35,12 @@
 <script src="{{ url_for('static', filename='scripts/utils.js') }}?v={{ ASSET_VERSION }}"></script>
 <script src="{{ url_for('static', filename='scripts/utubs.js') }}?v={{ ASSET_VERSION }}"></script>
 <script src="{{ url_for('static', filename='scripts/utubs_routes.js') }}?v={{ ASSET_VERSION }}"></script>
-<script src="{{ url_for('static', filename='scripts/members.js') }}?v={{ ASSET_VERSION }}"></script>
-<script src="{{ url_for('static', filename='scripts/members_routes.js') }}?v={{ ASSET_VERSION }}"></script>
 
-<!--
-<script src="{{ url_for('static', filename='scripts/urls.js') }}?v={{ ASSET_VERSION }}"></script>
-<script src="{{ url_for('static', filename='scripts/urls_routes.js') }}?v={{ ASSET_VERSION }}"></script>
--->
+<script src="{{ url_for('static', filename='scripts/components/members_deck/create_utub_member.js') }}?v={{ ASSET_VERSION }}"></script>
+<script src="{{ url_for('static', filename='scripts/components/members_deck/delete_utub_member.js') }}?v={{ ASSET_VERSION }}"></script>
+<script src="{{ url_for('static', filename='scripts/components/members_deck/utub_members.js') }}?v={{ ASSET_VERSION }}"></script>
+<script src="{{ url_for('static', filename='scripts/components/members_deck/utub_members_deck.js') }}?v={{ ASSET_VERSION }}"></script>
+<script src="{{ url_for('static', filename='scripts/components/members_deck/utub_members_utils.js') }}?v={{ ASSET_VERSION }}"></script>
 
 <script src="{{ url_for('static', filename='scripts/components/urls_deck/access_all_urls_btn.js') }}?v={{ ASSET_VERSION }}"></script>
 <script src="{{ url_for('static', filename='scripts/components/urls_deck/create_url_btns.js') }}?v={{ ASSET_VERSION }}"></script>
