Add utilities and mobile UI splash tests

--- a/src/static/styles/splash.css
+++ b/src/static/styles/splash.css
@@ -193,6 +193,7 @@ img {
 #ForgotPasswordText {
     color: black;
 }
+
 /* Login-Register */
 
 /* Validate Email */
@@ -240,5 +241,20 @@ img {
 
     #splash-major-text {
         text-align: center;
+    }
+}
+
+@media (max-width: 992px) {
+    .bg-cover {
+        overflow-y: hidden;
+    }
+
+    .bg-img {
+        /* https://images.unsplash.com/photo-1523240795612-9a054b0db644?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80 */
+        background: url("splash.jpg");
+        background-size: cover;
+        background-position: center center;
+        background-repeat: no-repeat;
+        min-height: 380px;
     }
 }
