Setup backend and tests, setup frontend for setting member icon in UTub

--- a/src/templates/home/UTubDeck/UTubCard.html
+++ b/src/templates/home/UTubDeck/UTubCard.html
@@ -1,3 +1,4 @@
 <span class="UTubSelector" utubid="{{ utub.id }}" position="{{ position }}" tabindex="0">
     <b class="UTubName">{{ utub.name|e }}</b>
+    <b class="UTubName">{{ utub.memberRole }}</b>
 </span>
