Add icon to frontend with test

--- a/src/static/styles/app.css
+++ b/src/static/styles/app.css
@@ -6,6 +6,8 @@
     --splashLabelGreen: rgba(46, 204, 113, 1.0);
     --darkSplashLabelGreen: rgba(30, 133, 73, 1.0);
 
+    --memberRoleIconColor: rgba(154, 234, 174, 1.0);
+
     /*1d2124*/
     --navbarTextHover: rgba(29, 33, 36, 1.0);
     /* #212529 */
