--- a/src/templates/home/URLDeck/CreateURLForm.html
+++ b/src/templates/home/URLDeck/CreateURLForm.html
@@ -1,21 +1,27 @@
 <div id="createURLWrap" class="input-text-holder flex-column createDiv pad-in-15p gap-20p" style="display: none;">
 	<div class="text-input-container">
 		<div class="text-input-inner-container">
-			<input class="text-input" type="text" id="urlTitleCreate" name="urlTitle" minlength={{CONSTANTS.URLS.MIN_URL_TITLE_LENGTH}} maxlength={{CONSTANTS.URLS.MAX_URL_TITLE_LENGTH}} required tabindex="0">
+			<input class="text-input" type="text" id="urlTitleCreate" name="urlTitle"
+				minlength={{CONSTANTS.URLS.MIN_URL_TITLE_LENGTH}}
+				maxlength={{CONSTANTS.URLS.MAX_URL_TITLE_LENGTH}} required tabindex="0">
 			<label class="text-input-label" for="urlTitleCreate">URL Title</label>
 		</div>
 		<span class="text-input-error-message" id="urlTitleCreate-error"></span>
 	</div>
 	<div class="text-input-container">
 		<div class="text-input-inner-container">
-			<input class="text-input" type="text" id="urlStringCreate" name="urlString" minlength={{CONSTANTS.URLS.MIN_URL_LENGTH}} maxlength={{CONSTANTS.URLS.MAX_URL_LENGTH}} required tabindex="0">
+			<input class="text-input" type="url" id="urlStringCreate" name="urlString"
+				minlength={{CONSTANTS.URLS.MIN_URL_LENGTH}} maxlength={{CONSTANTS.URLS.MAX_URL_LENGTH}}
+				required tabindex="0">
 			<label class="text-input-label" for="urlStringCreate">URL</label>
 		</div>
 		<span class="text-input-error-message" id="urlStringCreate-error"></span>
 	</div>
 	<div class="flex-row flex-start" style="gap: 8px; flex: 1 1 auto;">
-		<button id="urlSubmitBtnCreate" class="card-link btn green-clickable-wide btn-text-on-hvr" type="button">Add URL</button>
-		<button id="urlCancelBtnCreate" class="card-link btn cancelButton-wide btn-text-on-hvr" type="button">Cancel</button>
+		<button id="urlSubmitBtnCreate" class="card-link btn green-clickable-wide btn-text-on-hvr"
+			type="button">Add URL</button>
+		<button id="urlCancelBtnCreate" class="card-link btn cancelButton-wide btn-text-on-hvr"
+			type="button">Cancel</button>
 		<div id="urlCreateDualLoadingRing"></div>
 	</div>
 </div>
