Fix tests and update input types and autocomplete for forgot password and reset password

--- a/src/templates/password_reset/forgot_password.html
+++ b/src/templates/password_reset/forgot_password.html
@@ -17,14 +17,15 @@
             <div class="form-group forgot-password-form-group">
                 {{ forgot_password_form.email.label(class="form-control-label forgot-password-email-label")}}
                 {% if forgot_password_form.email.errors %}
-                {{ forgot_password_form.email(class="form-control login-register-form-group is-invalid") }}
+                {{ forgot_password_form.email(class="form-control login-register-form-group is-invalid",
+                autocomplete="email") }}
                 <div class="invalid-feedback">
                     {% for error in forgot_password_form.email.errors %}
                     <span>{{ error }}</span>
                     {% endfor %}
                 </div>
                 {% else %}
-                {{ forgot_password_form.email(class="form-control login-register-form-group")}}
+                {{ forgot_password_form.email(class="form-control login-register-form-group", autocomplete="email")}}
                 {% endif %}
             </div>
         </fieldset>
