--- a/src/templates/password_reset/reset_password.html
+++ b/src/templates/password_reset/reset_password.html
@@ -16,20 +16,23 @@
             <div class="form-group first-in-register-login-form">
                 {{ reset_password_form.new_password.label(class="form-control-label login-register-label")}}
                 {% if reset_password_form.new_password.errors %}
-                {{ reset_password_form.new_password(class="form-control login-register-form-group is-invalid") }}
+                {{ reset_password_form.new_password(class="form-control login-register-form-group is-invalid",
+                autocomplete="new-password") }}
                 <div class="invalid-feedback">
                     {% for error in reset_password_form.new_password.errors %}
                     <span>{{ error }}</span>
                     {% endfor %}
                 </div>
                 {% else %}
-                {{ reset_password_form.new_password(class="form-control login-register-form-group")}}
+                {{ reset_password_form.new_password(class="form-control login-register-form-group",
+                autocomplete="new-password")}}
                 {% endif %}
             </div>
             <div class="form-group">
                 {{ reset_password_form.confirm_new_password.label(class="form-control-label login-register-label")}}
                 {% if reset_password_form.confirm_new_password.errors %}
-                {{ reset_password_form.confirm_new_password(class="form-control login-register-form-group is-invalid")
+                {{ reset_password_form.confirm_new_password(class="form-control login-register-form-group is-invalid",
+                autocomplete="new-password")
                 }}
                 <div class="invalid-feedback">
                     {% for error in reset_password_form.confirm_new_password.errors %}
@@ -37,7 +40,8 @@
                     {% endfor %}
                 </div>
                 {% else %}
-                {{ reset_password_form.confirm_new_password(class="form-control login-register-form-group")}}
+                {{ reset_password_form.confirm_new_password(class="form-control login-register-form-group",
+                autocomplete="new-password")}}
                 {% endif %}
             </div>
         </fieldset>
