--- a/src/templates/register_user.html
+++ b/src/templates/register_user.html
@@ -17,66 +17,72 @@
             <div class="form-group first-in-register-login-form">
                 {{ register_form.username.label(class="form-control-label login-register-label")}}
                 {% if register_form.username.errors %}
-                {{ register_form.username(class="form-control login-register-form-group is-invalid") }}
+                {{ register_form.username(class="form-control login-register-form-group is-invalid",
+                autocomplete="username") }}
                 <div class="invalid-feedback">
                     {% for error in register_form.username.errors %}
                     <span>{{ error }}</span>
                     {% endfor %}
                 </div>
                 {% else %}
-                {{ register_form.username(class="form-control login-register-form-group")}}
+                {{ register_form.username(class="form-control login-register-form-group", autocomplete="username")}}
                 {% endif %}
             </div>
             <div class="form-group">
                 {{ register_form.email.label(class="form-control-label login-register-label")}}
                 {% if register_form.email.errors %}
-                {{ register_form.email(class="form-control login-register-form-group is-invalid") }}
+                {{ register_form.email(class="form-control login-register-form-group is-invalid", autocomplete="email")
+                }}
                 <div class="invalid-feedback">
                     {% for error in register_form.email.errors %}
                     <span>{{ error }}</span>
                     {% endfor %}
                 </div>
                 {% else %}
-                {{ register_form.email(class="form-control login-register-form-group")}}
+                {{ register_form.email(class="form-control login-register-form-group", autocomplete="email")}}
                 {% endif %}
             </div>
             <div class="form-group">
                 {{ register_form.confirm_email.label(class="form-control-label login-register-label")}}
                 {% if register_form.confirm_email.errors %}
-                {{ register_form.confirm_email(class="form-control login-register-form-group is-invalid") }}
+                {{ register_form.confirm_email(class="form-control login-register-form-group is-invalid",
+                autocomplete="email") }}
                 <div class="invalid-feedback">
                     {% for error in register_form.confirm_email.errors %}
                     <span>{{ error }}</span>
                     {% endfor %}
                 </div>
                 {% else %}
-                {{ register_form.confirm_email(class="form-control login-register-form-group")}}
+                {{ register_form.confirm_email(class="form-control login-register-form-group", autocomplete="email")}}
                 {% endif %}
             </div>
             <div class="form-group">
                 {{ register_form.password.label(class="form-control-label login-register-label")}}
                 {% if register_form.password.errors %}
-                {{ register_form.password(class="form-control login-register-form-group is-invalid") }}
+                {{ register_form.password(class="form-control login-register-form-group is-invalid",
+                autocomplete="new-password") }}
                 <div class="invalid-feedback">
                     {% for error in register_form.password.errors %}
                     <span>{{ error }}</span>
                     {% endfor %}
                 </div>
                 {% else %}
-                {{ register_form.password(class="form-control login-register-form-group")}}
+                {{ register_form.password(class="form-control login-register-form-group", autocomplete="new-password")}}
                 {% endif %}
             </div>
             <div class="form-group">
                 {{ register_form.confirm_password.label(class="form-control-label login-register-label")}}
                 {% if register_form.confirm_password.errors %}
-                {{ register_form.confirm_password(class="form-control login-register-form-group is-invalid") }}
+                {{ register_form.confirm_password(class="form-control login-register-form-group is-invalid",
+                autocomplete="new-password") }}
                 <div class="invalid-feedback">
                     {% for error in register_form.confirm_password.errors %}
                     <span>{{ error }}</span>
                     {% endfor %}
                 </div>
                 {% else %}
-                {{ register_form.confirm_password(class="form-control login-register-form-group")}}
+                {{ register_form.confirm_password(class="form-control login-register-form-group",
+                autocomplete="new-password")}}
                 {% endif %}
             </div>
         </fieldset>
